[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/Styles/Fonts/Size30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Prefabs/ExporterScreen/TimePeriodSelector.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Styles/Fonts/Size40.tres" type="DynamicFont" id=3]
[ext_resource path="res://Prefabs/Elements/OptionBox.tscn" type="PackedScene" id=4]

[node name="TimePeriodSelector" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 35.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastMonth" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 253.0
margin_bottom = 35.0
mouse_filter = 1
custom_colors/font_color = Color( 0.737255, 0.878431, 0.992157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Last month"

[node name="ThisMonth" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 273.0
margin_right = 413.0
margin_bottom = 35.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 0.701961, 0.14902, 0.984314 )
custom_fonts/font = ExtResource( 1 )
text = "This month"

[node name="Last3Months" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 433.0
margin_right = 608.0
margin_bottom = 35.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 0.701961, 0.14902, 0.984314 )
custom_fonts/font = ExtResource( 1 )
text = "Last 3 months"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 720.0
margin_bottom = 100.0
custom_constants/separation = 20
alignment = 1

[node name="SelectedMonthFirst" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
margin_left = 129.0
margin_top = 0.0
margin_right = 322.0
margin_bottom = 61.0

[node name="SelectedMonthBetween" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 342.0
margin_top = 3.0
margin_right = 378.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.14902, 0.6, 0.984314, 1 )
custom_fonts/font = ExtResource( 3 )
text = "->"

[node name="SelectedMonthLast" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
margin_left = 398.0
margin_top = 0.0
margin_right = 591.0
margin_bottom = 61.0
